--- a/web/zerocall/style/styleie.css
+++ b/web/zerocall/style/styleie.css
@@ -613,7 +613,7 @@ margin-top:12px;
 .navigasjon a.websms:hover{ background-position:-90px -284px}
 .navigasjon a.websms-s{ background-position:-90px -284px}
 
-.navigasjon a.logout{ background-position:-5px -340px}
+.navigasjon a.logout{ background-position:-6px -340px;}
 .navigasjon a.logout:hover{ background-position:-90px -340px}
 .navigasjon a.logout-s{ background-position:-90px -340px}
 
